--- a/elenco.html
+++ b/elenco.html
@@ -25,9 +25,12 @@
   </div>
   <br>
 
-  <div id="visualizzazione" class="d-none container text-center">
+  <div id="v" class="d-none container text-center">
     <button type="button" class="btn btn-success" id="mappa">mappa</button>
     <br>
+    <br>
+  </div>
+  <div id="visualizzazione" class="d-none container text-center">
   </div>
   <div id="mapp" class="d-none container text-center"></div>
   <script src="elenco.js" type="module">
