--- a/elenco.html
+++ b/elenco.html
@@ -4,6 +4,8 @@
   <title>POI -verona</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href="assets/images/favicon.png" rel="icon" />
+  <script src="https://cdn.jsdelivr.net/npm/ol@v8.1.0/dist/ol.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v8.1.0/ol.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">
@@ -27,12 +29,24 @@
 
   <div id="v" class="d-none container text-center">
     <button type="button" class="btn btn-success" id="mappa">mappa</button>
+    <button type="button" class="btn btn-success" id="elenco">elenco</button>
     <br>
     <br>
   </div>
   <div id="visualizzazione" class="d-none container text-center">
   </div>
-  <div id="mapp" class="d-none container text-center"></div>
+  <div id="mapp" class="d-none container text-center">
+    <div class="row">
+      <div class="col" id="b_POI"></div>
+      <div class="col">
+        <div class="map"></div>
+        <div id="popup" class="ol-popup">
+          <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+          <div id="popup-content"></div>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="elenco.js" type="module">
   </script>
 
